--- a/_units/09.md
+++ b/_units/09.md
@@ -240,7 +240,7 @@ Another classes of tunings can not be classified into one group or the other. Th
 In 1998, the American music theorist and professor of electrical engineering Richard Sethares wrote a book titled Tuning, Timbre, Spectrum, Scale in which he focussed on the interdependence of consonance/dissonance and timbre. A strinking example for this is how the structure of a scale depends on the spectral content of the sonorities employed. If the sounds feature a stretched spectrum obtained by this formula (S being the stretch factor; 2 for harmonic series)
 
 \begin{equation}
-f_n(stretched) = f_0 S^(\frac{n}{log(2)}) 
+f_n(stretched) = f_0 S^{(\frac{n}{log(2)})}
 \end{equation}
 
 a candence played with those sounds also asks for the scale to be stretched by the same amount. Otherwise, the chords and their progression sound out of tune. This is due to the lining up of the partials when playing sound simultaneously and sequentially. 
