--- a/_units/09.md
+++ b/_units/09.md
@@ -142,7 +142,7 @@ A comprehensive list of tunings and temperaments (currently more than 4600 files
 
 # Equal Temperament
 
-The ultimate compromise has been achieved by introducing equal temperament - the tuning of choice in the Classical, Romantic and Modern periods. Here, the discrepancy between 12 fifts and 7 octaves (Pythagorian comma; 23.46 cents) is _tempered out_ by dividing up the comma evenly (1.96 cents) and applying this value to all fifths: 701.96 cents - 1.96 cents = 700 cents. 
+The ultimate compromise has been achieved by introducing 12-tone equal temperament - the tuning of choice in the Classical, Romantic and Modern periods. Here, the discrepancy between 12 fifts and 7 octaves (Pythagorian comma; 23.46 cents) is _tempered out_ by dividing up the comma evenly (1.96 cents) and applying this value to all fifths: 701.96 cents - 1.96 cents = 700 cents. 
 
 By tempering out fifths, the above-mentioned tuning alternatives become _enharmonically equivalent_, e.g. there is no longer a distinction between a G# and Ab. Due to equal temperament, approaches such as dodecaphony (invented by Arnold Schoenberg in 1923) and total serialism were developed, which treat all tones equally and subject them to mathematical set operations.
 
@@ -183,18 +183,25 @@ Representatives of this movement, which American composer Harry Partch ("Genesis
 
 Figure 3. Arrangement of the bars in Harry Partch's Diamond Marimba in 11-limit just intonation.
 
+In the 1980s, German musicologist Martin Vogel developed an electronic keyboard system, Mutabor, capable of retuning itself on the fly. As chords are thus always in tune, listeners will notice that the roots of the chords are shifting. Obviously, there is a trade-off between the purity of a chord and its stability in the linear, temporal dimension. Whether or not this is acceptable depends on the musical style. Jazz musician Jacob Collier, for instance, uses a similar on-the-fly tuning system developed at MIT which has created a deep interest in the Classical contemporary and Jazz communities.
+
 ## Equal Divisions 
 ### Divisions of the Whole Tone
 Subdivisions of the whole tone into four (quartertone tuning or 24-tone equal temperament [24TET] also known as equal devision of the octave in 24 steps [24EDO]), five (30TET) and six (36TET) were already theorized and practiced at the beginning of the 20th Century by composers such as Busoni, Hába, Wyschnegradsky and Ives. The 72-step "ekmelic" tuning - used in Byzantine music theory - closely approximates most of the lower harmonic overtones was popular amongst a number of 20th century composers, while Mexican composer Julian Carrillo had a piano patented in 1940 with a keyboard in 16th notes (96TET) spanning just one octave. 
 
 ### Other Divisions of the Octave
-53TET is derived from stacking fifths and tempering out the small _schisma_ b etween 53 fifths and 31st octave. It was known to Chinese scholars in antiquity. 
+In theory, the octave can be devided into an infinite number of steps. So what makes one scale more interesting than another? Obviously this depends on the style of the music and whether or not the music is meant to be performed on real instruments. One important aspect is how well the scale is capable of representing just intervals, e.g. small integer frequency ratios such as 3/2 or 5/4. Theorist seeking to find temperaments with even better fifths than 12TET have considered 41TET and 53 TET. 53TET is derived from stacking fifths and tempering out the small _schisma_ between 53 fifths and 31st octave. It was known to Chinese scholars in antiquity. 
 
-{% include img-figure url="/MUTOR/assets/images/unit9_53TET-in-Max.png" description="Calculation of 53TET" %}
-Figure 4. Calculation of the 53-step equidistant tuning in Max
-{% include note author="vg" text="Redo in English or create online version" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_fifthstacker.png" description="Calculation of equidistant tunings based on stacking fifths" %}
+Figure 4. Calculation of the 53-tone (and other) equidistant tunings in Max 
 
-53TET features a __diatonic__ pitch set which also exists in temperaments such as at 17TET, 19TET (1/3 comma mean-tone tuning), 22TET, 31TET (1/4 comma mean-tone tuning) and 41TET. 
+{% include note author="vg" text="create online version" %}
+
+In turn, 19TET (approximation of 1/3 comma meantone tuning) and 31TET (approximation of 1/4 comma meantone tuning) features excellent major thirds and have therefore even been considered by 20th century scholars such as Joseph Yasser and Adriaan Fokker as contenders for the replacement of 12TET. 
+
+In 1980 American composer Easley Blackwood wrote Twelve Microtonal Etudes for Electronic Music Media, the first systematic exploration of equidistant tunings from 13TET to 24TET.
+
+Many tunings such as at 17TET, 19TET, 22TET, 31TET, 41TET and 53TET also features a __diatonic__ sub set of pitches and therefore be used as alternative tunings for tonal music.  
 
 These temperaments obey the following rule: 5 * m * s + 2 * n * s = 1200, where s is the step size of the temperament, and m and n are integers to be multiplied with s by to yield a diatoic whole tone or a semitone, resp. 
 
@@ -257,6 +264,11 @@ Note that depending on the stretch factor, chords may still sound strange and wa
 
 # Harmony and Timing
 In Western tonal music, chord progressions follow certain _syntactic_ rules particularly in cadences and sequences. Thereby, the meaning of a chord depends on its position on a weak or strong beat. Consider the sonority G-C-E-G commonly referred to as a **second inversion 6-4 chord**. If positioned on the downbeat of measure, it is perceived as **cadential 6-4 chord**, first resolving to the dominant and then finally to the tonic. If positioned on a weak beat between a subdominant and its first inversion it is to be labeled as a **passing 6-4 chord** with no need to resolve any of its pitches.  
+
+# Harmony and Gestalt
+Intervals and chords are commonly derived from the harmonic series. The major triad has throughout history been explained as representative of the 4/5/6 relationship. The derivation of minor chord, in turn, has been more controversial. Some consider it the representation of the 10/12/15 relationship while other argue that it actually stems from subharmonic series, the inversion of the harmonic series (with the same relationship of the ordinal numbers 4/5/6 as the major chord). While chords taken from the subharmonic series may still be considered stable, they may lack a fundamental quality related to the creation of a virtual fundamental.
+
+Chords, therefore, need to be regarded as hierarchical gestalts of gestalts where aspects such as virtual fundamental, voicing, sensory dissonance and temporal succession (context) come into play.
 
 # Harmony in the 20th/21st Centuries
 
