--- a/_units/09.md
+++ b/_units/09.md
@@ -36,9 +36,9 @@ In this unit we will look at scales and harmony from the perspective of percepti
 
 As we can see from the above definition, the word harmony often refers to either a chord, a progression of chords, or a consonant (or generally speaking, pleasing) sonority.  The task of defining harmony is a difficult one — is it a chord or a progression of chords?  How are harmony and harmonic progression different from timbre and timbral evolution?  In this unit, we will discuss these questions and look at how composers in the 20th and 21st centuries view harmony. We will also look at the effects that tuning systems have on harmony.
 
-Scales are the collection of pitches, harmonies and melodies are formed from. They usually span the interval of an octave and repeat when going beyond it. The pitch of the individual tones within a scale depends on a variety of factors which have undergone changes throughout history as composers focussed on aspects such as pure sonorities or being able to modulate to distant key areas. It turns out that using 12 pitches per octave is the result of a compromise, but there has been an interest throughout history to consider scales with fewer or many more pitches per octave or other intervals. The deviation from the standard is usually referred to as microtonality. 
+Scales (derived from Italian _scala_ meaning "staircase") are the collection of pitches, harmonies and melodies are formed from. They usually span the interval of an octave and repeat when going beyond it. The pitch of the individual tones within a scale depends on a variety of factors which have undergone changes throughout history as composers focussed on aspects such as pure sonorities or being able to modulate to distant key areas. It turns out that using 12 pitches per octave is the result of a compromise, but there has been an interest throughout history to consider scales with fewer or many more pitches per octave or other intervals. The deviation from the standard is usually referred to as microtonality. 
 
-# Historical View of Harmony
+# Historical View of Scale and Harmony
 
 The term harmony comes from a Greek word that translates literally as "means of joining" and is related to the word for joint or shoulder [http://www.etymonline.com/index.php?term=harmony].  In ancient Greek music, the term referred to the juxtaposition of different elements, but since the musical practice of the time did not include the simultaneous sounding of multiple notes, this concept was only used as a way of discussing the theoretical relationships between pitches.  In the Medieval period, composers began to write music in which two notes that formed a perfect consonance (fourths, fifths, or octaves) were sung simultaneously, and in the Renaissance Gioseffo Zarlino wrote of triadic harmony that included the imperfect consonances:  thirds.  These descriptions pertain only to the structure of an isolated simultaneity, although it is clear that as far back as the 15th century, theorists understood the concept of harmony to encompass not only the relationships between simultaneously sounded pitches, but the relationships between chords.  Additionally, some theorists have considered harmony to be the progression through, and alternation of, consonant and dissonant sonorities.  
 
