--- a/_units/09.md
+++ b/_units/09.md
@@ -5,8 +5,8 @@
 ###
 title: Scale and Harmony
 number: 9
-short_description: short description of the unit
-summary: A scale is a set of ascending or descending pitches ordered according to cognitive, theoretical and/or historical principles. They provide the pitch material from which harmonies are built. The theory of harmony is preoccupied with the laws governing the structure, relation, and progression of chords, much of it based on the principle of tension and release. In recent times, composers and theorists have also started to consider elements such as roughness and inharmonicity when constructing sonorities and their progressions.
+short_description: A scale is a set of ascending or descending pitches ordered according to cognitive, theoretical and/or historical principles. They provide the pitch material from which harmonies are built. The theory of harmony is preoccupied with the laws governing the structure, relation, and progression of chords, much of it based on the principle of tension and release. In recent times, composers and theorists have also started to consider elements such as roughness and inharmonicity when constructing sonorities and their progressions.
+summary: In this unit we have learned about scales and harmony. Harmony is a complex notion that refers both to the pleasantness of simultanously sounding notes as well as the logic in which one sonority moves to another within a given framework such as a key area. A scale contains the tones from which sonorities are formed. These tones can be tuned to pitches according to various principles of which just intonation and equal temperament are examples of. The theory and practice of microtonality takes advantage of the fact that scales can be formed from a virtually unlimited number of pitches. In the 20th and 21st centuries, the principles of tension and release have been expanded by taking musical parameters such as roughness and inharmonicity in consideration. 
 authors: 
  - Georg Hajdu
  - John MacCallum
@@ -328,10 +328,7 @@ A novel feature of Partiels is the idea of gradual timbral / harmonic evolution.
 
 [NOTE--THIS IS A SCREENSHOT OF THE HELP PATCH.  A REAL DEMO IS COMING ASAP]
 
-{% include img-figure url="/MUTOR/assets/images/unit9_migrator-ss.png" description="Roughness" %}
-
-# Summary
-In this unit we have learned about scales and harmony. Harmony is a complex notion that refers both to the pleasantness of simultanously sounding notes as well as the logic in which one sonority moves to another within a given framework such as a key area. A scale contains the tones from which sonorities are formed. These tones can be tuned to pitches according to various principles of which just intonation and equal temperament are examples of. The theory and practice of microtonality takes advantage of the fact that scales can be formed from a virtually unlimited number of pitches. In the 20th and 21st centuries, the principles of tension and release have been expanded by taking musical parameters such as roughness and inharmonicity in consideration.  
+{% include img-figure url="/MUTOR/assets/images/unit9_migrator-ss.png" description="Roughness" %} 
 
 # References
 
