--- a/_units/09.md
+++ b/_units/09.md
@@ -32,7 +32,7 @@ mathjax: true
 
 In this unit we will look at scales and harmony from the perspective of perception and cognition of music. In units 4 and 5 we have already learned about consonance and dissonance as well as pitch, intervals and key areas. Harmony is beased on those principles, e.g. we expect chords to have low sensory consonance and we also are keenly aware of when chords don't seem to fit in a passage of music. 
 
-[Webster's dictionary](http://www.m-w.com) defines harmony in reference to music as (1) _the combination of simultaneous musical notes in a chord, (2) the structure of music with respect to the composition and progression of chords or (3) the science of the structure, relation, and progression of chords._ Colloquially, harmony also denotes _the pleasing or congruent arrangement of parts_.
+[Webster's dictionary](http://www.m-w.com) defines harmony in reference to music as (1) _the combination of simultaneous musical notes in a chord, (2) the structure of music with respect to the composition and progression of chords or (3) the science of the structure, relation, and progression of chords._ In more general terms, harmony also denotes _the pleasing or congruent arrangement of parts_.
 
 As we can see from the above definition, the word harmony often refers to either a chord, a progression of chords, or a consonant (or generally speaking, pleasing) sonority.  The task of defining harmony is a difficult one — is it a chord or a progression of chords?  How are harmony and harmonic progression different from timbre and timbral evolution?  In this unit, we will discuss these questions and look at how composers in the 20th and 21st centuries view harmony. We will also look at the effects that tuning systems have on harmony.
 
